fix button mobile font size

--- a/styles/components/button-primary.module.scss
+++ b/styles/components/button-primary.module.scss
@@ -19,5 +19,6 @@
     padding: $m16 0;
     background-color: $white;
     color: $black;
+    font-size: $h3Mobile;
   }
 }
